# cracken

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  abi_test.c  abi_test.zig  app.c  app.h  app.zig  build.zig  compile_flags.txt  cracken.kdev4  cracken.manifest  cracken.zig  curve.c  curve.h  curve.zig  deviceenumerator.c  deviceenumerator.h  deviceenumerator.zig  hiddevice.c  hiddevice.h  hiddevice.zig  kraken.c  kraken.h  kraken.zig  krakenwidget.c  krakenwidget.h  krakenwidget.zig  layout.c  layout.h  layout.zig  list.c  list.h  list.zig  main.c  mainwindow.c  mainwindow.h  mainwindow.zig  win32.zig  (+7 more)
